--- a/index.html
+++ b/index.html
@@ -15,35 +15,24 @@
 <body>
   <h1>Star Wars RPG</h1>
   <div class="row" id="characterlist">
-    <div id="cobi" class="col-1-md">
         <img id="obi" src="assets/images/obi.jpeg" height="200px" width="200px" alt="Obi-wan Kenobi">
-      </div>
-      <div id="cluke" class="col-1-md">
         <img id="luke" src="assets/images/luke.jpg" height="200px" width="200px" alt="Luke Skywalker">
-      </div>
-      <div id="cvader" class="col-1-md">
         <img id="vader" src="assets/images/vader.jpg" height="200px" width="200px" alt="Darth Vader">
-      </div>
-      <div id="cr2d2" class="col-1-md">
         <img id="r2d2" src="assets/images/r2d2.jpg" height="200px" width="200px" alt="R2D2">
-      </div>
     </div>
     <p>Enemies Available to Attack</p>
     <p id="enemies"></p>
-    <div id="me">
     <p>Your Character</p>
     <p id="character"></p>
     <p id="phealth"></p>
-  </div>
-  <div id="you">
     <p>Defender</p>
     <p id="defender"></p>
     <p id="ehealth"></p>
-  </div>
     <p>Fight Section</p>
     <p><button id="attack">Attack</button></p>
     <p id="pfight"></p>
     <p id="efight"></p>
+    <button id="restart">Restart</button>
     <script src="assets/javascript/game.js"></script>
 </body>
 
