--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <div id="obi">
       <p id="obiname"></p>
       <img src="assets/images/obi.jpeg" height="125px" width="125px" alt="Obi-wan Kenobi">
-      <p id="obihealth"></p>
+      <p id="obihealth" class="health"></p>
     </div>
     <div id="luke">
       <p id="lukename"></p>
       <img src="assets/images/luke.jpg" height="125px" width="125px" alt="Luke Skywalker">
-      <p id="lukehealth"></p>
+      <p id="lukehealth" class="health"></p>
     </div>
     <div id="vader">
       <p id="vadername"></p>
       <img src="assets/images/vader.jpg" height="125px" width="125px" alt="Darth Vader">
-      <p id="vaderhealth"></p>
+      <p id="vaderhealth" class="health"></p>
     </div>
     <div id="r2d2">
       <p id="r2d2name"></p>
       <img src="assets/images/r2d2.jpg" height="125px" width="125px" alt="R2D2">
-      <p id="r2d2health"></p>
+      <p id="r2d2health" class="health"></p>
     </div>
   </div>
   <p id="enemiesHeader">Enemies Available to Attack</p>
